# upparat

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  LICENSE.txt  README.md  docker-compose.yaml  docker-compose.yml  setup.cfg  setup.py
.buildkite/: pipeline.yml
.github/workflows/: actions.yaml  python-publish.yml  run-unittests.yml
docs/: README.md  configuration.md  statemachine.puml
examples/: README.md
examples/upparat/config/: config.alpn.ini
examples/upparat/hooks/: restart.sh
misc/: README.md  upparat_create_job.py
misc/examples/: README.md  docker-compose.yaml
misc/examples/mosquitto/: aws-bridge.conf.tmpl
misc/scripts/: upparat_create_job.py
service/systemd/: upparat.service
src/upparat/: __init__.py  cli.py  config.py  events.py  hooks.py  jobs.py  mqtt.py
src/upparat/statemachine/: __init__.py  download.py  fetch_jobs.py  install.py  machine.py  monitor.py  restart.py  select_job.py  verify_installation.py  verify_job.py
tests/: hooks_test.py  utils.py  walking_skeleton_test.py
tests/cli/: cli_test.py
tests/config/: config_test.py  test.conf
tests/hooks/: hooks_test.py  test.sh
tests/integration/: README.md  aws_jobs.py  docker-compose.yaml  docker-compose.yml  upparat-test.yaml  upparat-test.yml
tests/integration/mosquitto/: aws-bridge.conf.tmpl
tests/mqtt/: mqtt_test.py
tests/statemachine/: download_test.py  fetch_jobs_test.py  install_test.py  monitor_test.py  restart_test.py  select_job_test.py  statemachine_transitions_test.py  verify_installation_test.py  verify_job_test.py
(+8 files in other folders)
